force-app/main/default/objects/Loan__c/fields/Loan_Expected__c.field-meta.xml
<CustomField>
    <fullName>Loan_Expected__c</fullName>
    <label>Loan Expected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>